--- a/friends/index.html
+++ b/friends/index.html
@@ -281,7 +281,7 @@
                 <div class="brand">
                     <div class="title center-align">
                     
-                        教练
+                        Coach
                     
                     </div>
 
