--- a/about/index.html
+++ b/about/index.html
@@ -519,7 +519,7 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"hello各位","value":2},{"name":"SMC超脑微教练四期一阶醒觉智慧","value":1},{"name":"lesson","value":10}],
+                data: [{"name":"SMC超脑微教练四期一阶醒觉智慧","value":1},{"name":"hello各位","value":2},{"name":"lesson","value":10}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
