--- a/about/index.html
+++ b/about/index.html
@@ -318,14 +318,14 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                     <div class="post-statis col l4 hide-on-med-and-down" data-aos="zoom-in-right">
                         
 <div class="statis">
-    <span class="count"><a href="/" target="_blank">23</a></span>
+    <span class="count"><a href="/" target="_blank">24</a></span>
     <span class="name">文章</span>
 </div>
 
 
 
 <div class="statis">
-    <span class="count"><a href="/categories" target="_blank">4</a></span>
+    <span class="count"><a href="/categories" target="_blank">5</a></span>
     <span class="name">分类</span>
 </div>
 
@@ -346,14 +346,14 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                                 <div class="post-statis hide-on-large-only" data-aos="zoom-in-right">
                                     
 <div class="statis">
-    <span class="count"><a href="/" target="_blank">23</a></span>
+    <span class="count"><a href="/" target="_blank">24</a></span>
     <span class="name">文章</span>
 </div>
 
 
 
 <div class="statis">
-    <span class="count"><a href="/categories" target="_blank">4</a></span>
+    <span class="count"><a href="/categories" target="_blank">5</a></span>
     <span class="name">分类</span>
 </div>
 
@@ -477,7 +477,7 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                 name: '文章篇数',
                 type: 'line',
                 color: ['#6772e5'],
-                data: [0,0,0,0,0,0,0,0,0,0,17,2,3],
+                data: [0,0,0,0,0,0,0,0,0,0,17,2,4],
                 markPoint: {
                     symbolSize: 45,
                     color: ['#fa755a','#3ecf8e','#82d3f4'],
@@ -519,7 +519,7 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"hello各位","value":6},{"name":"SMC超脑微教练四期一阶醒觉智慧","value":1},{"name":"lesson","value":10},{"name":"Vp群主战队","value":1}],
+                data: [{"name":"hello各位","value":6},{"name":"SMC超脑微教练四期一阶醒觉智慧","value":1},{"name":"lesson","value":10},{"name":"SMC超脑微教练四期二阶思维智慧","value":1},{"name":"Vp群主战队","value":1}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
@@ -556,7 +556,7 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                 type: 'bar',
                 color: ['#82d3f4'],
                 barWidth : 18,
-                data: [20,20],
+                data: [21,21],
                 markPoint: {
                     symbolSize: 45,
                     data: [{
