--- a/about/index.html
+++ b/about/index.html
@@ -519,7 +519,7 @@ $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay
                 type: 'pie',
                 radius: '50%',
                 color: ['#6772e5', '#ff9e0f', '#fa755a', '#3ecf8e', '#82d3f4', '#ab47bc', '#525f7f', '#f51c47', '#26A69A'],
-                data: [{"name":"5期创造心想事成魔法人生","value":6},{"name":"白风2019全新显化启动","value":4},{"name":"hello各位","value":2},{"name":"SMC超脑微教练四期二阶思维智慧","value":3}],
+                data: [{"name":"5期创造心想事成魔法人生","value":6},{"name":"白风2019全新显化启动","value":4},{"name":"SMC超脑微教练四期二阶思维智慧","value":3},{"name":"hello各位","value":2}],
                 itemStyle: {
                     emphasis: {
                         shadowBlur: 10,
